# imagewiz

./: .replit  Current axios baseURL  README.md  add_languages.py  add_placeholder_translations.py  add_test_blog_post.py  auto_translate_blog_posts.py  backend-workflow.sh  build-frontend.sh  check_blog_translations.py  check_db_columns.py  check_posts.py  deploy.js  direct-test.html  list_posts.py  login_response.json  make-admin.sh  make_admin.py  new_login.json  package-lock.json  package.json  proxy-test.html  pyproject.toml  replit.nix  response.json  run-migration.sh  run-order-test.sh  run-test.js  run_backend.sh  run_both.js  run_migration.py  server.js  simple-form.html  simple-test-server.js  split-services.sh  start-app-wrapper.sh  start-app.mjs  start-both.js  start-workflow.js  start_app.sh  (+44 more)
.workflows/: Start Flask Backend.workflow  Start application.workflow  python_backend.yaml
attached_assets/: Pasted--1--1743247918999.txt  Pasted--DOCTYPE-html-html-lang-en-head-meta-charset-UTF-8-meta-name-viewport-content-width--1740812881922.txt  Pasted-Build-a-responsive-pricing-table-feature-with-integrated-Stripe-embeded-form-processing-and-user-ac-1743579139651.txt  Pasted-Build-a-responsive-pricing-table-feature-with-integrated-Stripe-payment-processing-and-user-account--1743404362079.txt  Pasted-Create-a-Checkout-Session-Add-an-endpoint-on-your-server-that-creates-a-Checkout-Session-setting-th-1743769242527.txt  Pasted-Create-a-function-on-your-server-to-fulfill-successful-payments-Webhooks-trigger-this-function-and-1743829111896.txt  (+7 more)
backend/: README.md  run.py  (+22 more)
(+228 files in other folders)
